// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Snapshots when determinate should render correctly 1`] = `
<div
  className="css-kive3z-ProgressBarWrapper e8052qh1"
>
  <div
    className="css-ime4pt-ProgressBar-generateProgressBarBg e8052qh0"
    style={
      Object {
        "width": "10%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when full should render correctly 1`] = `
<div
  className="css-kive3z-ProgressBarWrapper e8052qh1"
>
  <div
    className="css-16ihaiv-ProgressBar-generateProgressBarBg e8052qh0"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when indeterminate should render correctly 1`] = `
<div
  className="css-kive3z-ProgressBarWrapper e8052qh1"
>
  <div
    className="css-ime4pt-ProgressBar-generateProgressBarBg e8052qh0"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`<Progress /> Snapshots when static should render correctly 1`] = `
<div
  className="css-kive3z-ProgressBarWrapper e8052qh1"
>
  <div
    className="css-16ihaiv-ProgressBar-generateProgressBarBg e8052qh0"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;
